[gd_scene load_steps=4 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://scripts/enemy_tmp.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[node name="Lvl1Enemy" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}
scoreBase = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.0980392, 1, 0.0235294, 1 )
rotation = 1.57079
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
rotation = 1.57079
collision_layer = 0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
scale = Vector2( 1.00445, 1 )
polygon = PoolVector2Array( 7.96453, 0, 95.5747, -128, 63.7167, -192, -63.7158, -192, -95.5741, -128, -7.96453, 0 )

[node name="IdleTimer" type="Timer" parent="."]
wait_time = 3.0

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="IdleTimer" to="." method="_on_IdleTimer_timeout"]
